# write-only

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  reference.rs  slice.rs
src/reference/: non_volatile.rs  volatile.rs
src/slice/: non_volatile.rs  volatile.rs
