[package]
name = "write-only"
license = "MPL-2.0"
readme = "README.md"
description = "References/slices that provide write-access, but no read-access."
repository = "https://github.com/regexident/write-only"
keywords = ["write-only", "reference", "slice"]
categories = ["no-std", "rust-patterns"]
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
droptest = "0.2.0"
